@@ -9,8 +9,6 @@
 #include "mushtype.h"
 #include "ptab.h"
 #include "dbio.h"
-/* Remove when confmagic's inline #defines get shifted to config.h */
-#include "confmagic.h"
 
 typedef struct flag_info FLAG;
 
